data/derived/comb/progs/unify/prog5140.ml.out
Characters 76-79:
  else f b;;
       ^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a * bool
